refactor gradle